fix scrolling jumping to bottom on new messages

--- a/stylesheets/_session_constants.scss
+++ b/stylesheets/_session_constants.scss
@@ -187,7 +187,6 @@ $session-subtle-factor: 0.6;
 // Default Components
 $session-search-input-height: 34px;
 $main-view-header-height: 63px;
-$session-conversation-header-height: 60px;
 $session-left-pane-width: 300px;
 
 // Various Components
